deployment/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scorm-h5p-wrapper
  labels:
    app: scorm-h5p-wrapper
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: scorm-h5p-wrapper
  template:
    metadata:
      labels:
        app: scorm-h5p-wrapper
    spec:
      securityContext:
        fsGroup: 1000
        #runAsGroup: 33
        #fsGroupChangePolicy: "OnRootMismatch"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: DoesNotExist
              - key: cloud.google.com/gke-nodepool
                operator: In
                values:
                - spot-pool
      containers:
      - name: scorm-h5p-wrapper
        image: eu.gcr.io/veri-cluster/scorm-h5p-wrapper
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          timeoutSeconds: 30
        startupProbe:
          initialDelaySeconds: 60
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          timeoutSeconds: 30
        resources:
          limits:
            cpu: 1000m
            memory: 1024M
          requests:
            cpu: 500m
            memory: 512MM
